--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/thailiteratures">Thai Literatures</a>
+      <a class="navbar-brand" href="/">Thai Literatures</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
